Polished section 14.1 and 14.2 in proto4.tex.

--- a/proto4.tex
+++ b/proto4.tex
@@ -10,12 +10,12 @@
 
 
 \section{About this chapter}
-The aim of this prototype is to embed \languageConstruct{IO} operations within the definition on an eDSL so as to allow the chaining and 
-control of operations of the language irrespective of them pure or impure.
+The aim of this prototype is to embed \languageConstruct{IO} operations within the definition of an eDSL so as to allow the chaining and 
+control of operations of the language irrespective of them being pure or impure.
 
 \section{\progLang{Haskell} \languageConstruct{IO} is pure}
 
-\cite{website:ioispurechristaylor}
+The discussion in this section is mainly paraphrased from \cite{website:ioispurechristaylor}.
 
 \progLang{Haskell} calls itself a pure functional programming language. Every function in \progLang{Haskell} is a function in the mathematical sense (i.e., ``pure'').
  Even side-effecting \languageConstruct{IO} operations are but a description of what to do, produced by pure code. There are no statements or instructions, 
