small fix in proto3.tex.

--- a/proto3.tex
+++ b/proto3.tex
@@ -154,7 +154,7 @@ Listing~\ref{tab:andorraengineminiprlg} represents the Andorra engine.
 
 \section{Language}
 \subsection{Current language}
-Listing~\ref{tab:miniprlglang} shows the abstract syntax of \codeLibrary{Mini \progLang{Prolog}}} \cite{website:mini-prolog-hugs98}.
+Listing~\ref{tab:miniprlglang} shows the abstract syntax of \codeLibrary{Mini \progLang{Prolog}} \cite{website:mini-prolog-hugs98}.
 A term can either be a variable or a complex term with an atom as a head. A \haskellConstruct{Clause} consists 
 of a head of type \haskellConstruct{Term} and a body of type \haskellConstruct{[Term]}. 
 
