added section for two interpreter strategy in protot4.tex.

--- a/proto4.tex
+++ b/proto4.tex
@@ -189,6 +189,12 @@ we use \haskellConstruct{NoResult}.
 \label{tab:prologresultdatatype}
 \end{code-list}
 
+\section{Justifying that Approach 2 is achievable}
+two interpreter strategy
+1. pure
+2. in IO Monad
+
+
 \section{Chapter recapitulation}
 
 \ifMain
