added content to conlcusion.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -22,6 +22,10 @@ Moreover, this will be an attempt to answer the question how practical \progLang
 \end{comment}
 
 
+This thesis looked into the problem of embedding \progLang{Prolog} in \progLang{Haskell}. More generally it gives insights into the 
+different approaches of embedding programming languages
+
+
 \ifMain
 \begin{scope}
   \nolinenumbers
