--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -5,7 +5,7 @@
 % School of Computing
 % Clemson University
 %
-\documentclass[12pt,pagewise,right]{unbcthesis}
+\documentclass[12pt,pagewise,right,nofinal]{unbcthesis}
 
 \usepackage{comment}
 \usepackage{subfiles}
