Attempting \ifDraft protection of endnotes.

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -335,6 +335,7 @@
   \clearpage
 
 \begin{scope}
+  \ifDraft
   \nolinenumbers
   \enotesize
   \par
@@ -352,6 +353,7 @@
   %% there is an unended soope somewhere in an \endnote.
   \par
   \end{singlespace}
+  \fi
 \end{scope}
 
 
